payment system added

--- a/src/Pages/Dashboard/Dashboard/Payment/Payment.css
+++ b/src/Pages/Dashboard/Dashboard/Payment/Payment.css
@@ -1,5 +1,5 @@
 .payment{
-    background-image: url(https://cdn.wallpapersafari.com/39/61/90hKHk.jpg);
+   /* background-image: url(https://cdn.wallpapersafari.com/39/61/90hKHk.jpg);*/
     text-align: center;
     align-items: center;
     background-position: right;
